# archon72

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  STORY_8.2_IMPLEMENTATION_SUMMARY.md  STORY_8.3_IMPLEMENTATION_SUMMARY.md  crew-adapater-expansion-plan.md  docker-compose.yml  fix-tests.md  pyproject.toml  quake-test.sh  quarantined-compartmentalization-test.sh  split-brain-test.sh  task-list.md
.codex/: auth.json  config.toml  history.jsonl  version.json
.codex/prompts/: bmad-bmm-workflows-README.md
.github/workflows/: test.yml
_bmad-output/: bmm-workflow-status.yaml  project-context.md  test-design-epic-1.md  traceability-matrix.md
_bmad-output/analysis/: adversarial-scanner-report-2025-12-28.md  brainstorming-session-2024-12-27.md  brainstorming-session-2025-12-27.md  implementation-readiness-re-review-2025-12-28.md  implementation-readiness-report-2025-12-28.md  integration-pass-outline-2025-12-28.md
_bmad-output/conclave/: checkpoint-09d0702b-8fd1-4e3e-a731-f7861361f931-20260118-223617.json  checkpoint-0cb51099-182a-4d5a-9698-261ba54c6a27-20260119-053611.json  checkpoint-0cb51099-182a-4d5a-9698-261ba54c6a27-20260119-054326.json  checkpoint-2541320d-c2ca-4a16-aa96-042b01bd98d2-20260117-175428.json  checkpoint-2541320d-c2ca-4a16-aa96-042b01bd98d2-20260117-180111.json  checkpoint-c53dba60-e7d8-4eae-9c42-14750a914b4e-20260110-144320.json  checkpoint-c53dba60-e7d8-4eae-9c42-14750a914b4e-20260110-145333.json  checkpoint-c53dba60-e7d8-4eae-9c42-14750a914b4e-20260110-150336.json  checkpoint-c53dba60-e7d8-4eae-9c42-14750a914b4e-20260110-151052.json  checkpoint-edae2963-8470-4b5d-97e8-2670d1c4553f-20260110-142518.json  transcript-0cb51099-182a-4d5a-9698-261ba54c6a27-20260119-054326.md  transcript-2541320d-c2ca-4a16-aa96-042b01bd98d2-20260117-180111.md  transcript-2f53cf6e-1a35-407e-bb8b-eef2a272487e-20260125-163512.md  transcript-5d3d5f34-f968-4ea3-be94-43dfdb0137d9-20260119-161256.md  transcript-c53dba60-e7d8-4eae-9c42-14750a914b4e-20260110-151052.md  transcript-edae2963-8470-4b5d-97e8-2670d1c4553f-20260110-142518.md
_bmad-output/deliberations/: deliberation-20260110-135423.json
_bmad-output/implementation-artifacts/: full-project-retrospective-2026-01-09.md  sprint-status.yaml  tech-spec-async-vote-validation.md
_bmad-output/motion-queue/: active-queue.json
_bmad-output/motions/: quake-motion.md  split-brain-motion.md
_bmad-output/planning-artifacts/: architecture.md  archon-profile-system-spec.md  bmm-workflow-status.yaml  conclave-prd-amendment-notes.md  epics-async-vote-validation.md  epics.md  governance-architecture.md  governance-prd.md  government-epics.md  implementation-readiness-report-2025-12-28.md  mitigation-architecture-spec.md  motion-review-pipeline-spec.md  petition-system-architecture.md  petition-system-epics.md  petition-system-prd.md  prd.md  product-brief-archon72-2025-12-27.md  (+3 more)
aegis-bridge/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  run_with_deliberation.py
config/: archon-llm-bindings.yaml  execution-patterns.yaml  secretary-llm-config.yaml
docs/: archons-base.csv  archons-base.json  ci-secrets-checklist.md  ci.md  conclave-prd.md  constitutional-implementation-rules.md  diagrams.md  elevenlabs-voices-full.json  elevenlabs-voices.json  new-requirements.md  prd.md  principles.md  sample-petition-payload.md
migrations/: 001_create_events_table.sql  002_hash_chain_verification.sql  003_key_registry.sql  004_witness_validation.sql  005_clock_drift_monitoring.sql  006_halt_state_table.sql  007_halt_clear_protection_trigger.sql  008_terminal_event_trigger.sql  009_create_ledger_schema.sql  010_create_projections_schema.sql  011_create_merkle_epochs_table.sql  012_create_petition_submissions.sql  013_create_petition_migration_mapping.sql  014_create_job_queue_tables.sql  015_create_realms_table.sql  016_create_rate_limit_buckets.sql  017_create_deliberation_sessions.sql  018_create_dissent_records.sql  019_add_round_tracking.sql  020_create_transcript_contents.sql  021_create_acknowledgment_reason_enum.sql  022_create_acknowledgments_table.sql  023_create_referrals_table.sql  024_create_co_signs_table.sql  025_add_cosigner_count_to_petition_submissions.sql  026_add_escalation_tracking_fields.sql  027_add_petition_adoption_fields.sql  028_add_king_acknowledgment_field.sql  029_enforce_adoption_provenance_immutability.sql  030_create_legitimacy_metrics_table.sql  031_create_legitimacy_alert_tables.sql  032_create_orphan_detection_tables.sql  033_create_meta_petition_queue.sql  034_create_adoption_ratio_tables.sql  035_create_realm_health_table.sql  036_create_notification_preferences.sql  037_add_defer_no_response_outcomes.sql  spike_001_hash_trigger.sql
scripts/: burn-in.sh  check_imports.py  check_no_datetime_now.py  check_no_inline_branch_conflict_rules.py  ci-local.sh  constitutional_lint.py  create_kafka_topics.py  ingest_task_result.py  migrate_cessation_petitions.py  reroute_task.py  rollback_cessation_migration.py  run_administrative_pipeline.py  run_award_pipeline.py  run_cluster_consent.py  run_conclave.py  run_consolidator.py  run_duke_program_status.py  run_duke_proposals.py  run_earl_aggregation.py  run_earl_decomposition.py  run_earl_settlement.py  run_execution_planner.py  run_executive_pipeline.py  run_executive_review.py  run_full_deliberation.py  run_full_pipeline.sh  run_petition_deliberation.py  run_proposal_selection.py  run_registrar.py  run_result_submission.py  run_review_pipeline.py  run_rfp_generator.py  run_roll_call.py  run_secretary.py  run_selection_handoff.py  run_ttl_enforcement.py  test-changed.sh  test_ollama_connection.py  unblock_rfp.py  validate_archons_base.py  (+1 more)
src/: __init__.py
tests/: __init__.py  conftest.py
tools/archon72-verify/: LICENSE  README.md  pyproject.toml
tools/archon72-verify/archon72_verify/: __init__.py  cli.py  client.py  database.py  verifier.py
tools/archon72-verify/tests/: __init__.py  test_cli.py  test_client.py  test_database.py  test_package.py  test_verifier.py
(+2734 files in other folders)
