[tool.poetry]
name = "archon72"
version = "0.1.0"
description = "Constitutional AI Governance System with 72 Agents - Witnessed, Transparent, Accountable"
authors = ["Archon72 Team <team@archon72.io>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core Framework
fastapi = ">=0.100.0"
uvicorn = {version = ">=0.24.0", extras = ["standard"]}
pydantic = ">=2.0.0"

# Multi-Agent Orchestration (ADR-2)
crewai = ">=0.80.0"
litellm = ">=1.44.0"

# Database & Event Store (ADR-1)
supabase = ">=2.0.0"
sqlalchemy = {version = ">=2.0.0", extras = ["asyncio"]}
alembic = ">=1.12.0"
asyncpg = ">=0.29.0"

# Dual-Channel Halt Transport (ADR-3)
redis = ">=5.0.0"

# Async HTTP Client
httpx = ">=0.25.0"

# Kafka + Avro serialization (Async vote validation)
confluent-kafka = ">=2.2.0"
fastavro = ">=1.9.0"

# Environment variable loading
python-dotenv = ">=1.0.0"

# YAML configuration parsing
pyyaml = ">=6.0"

# Constitutional Witnessing - Structured Logging
structlog = ">=24.0.0"

# HSM Signing & Hash-Chaining (ADR-4)
cryptography = ">=41.0.0"

# High-throughput hash algorithm (AD-6, consent-gov-1-3)
blake3 = ">=0.4.0"

# Server-Sent Events for Push Notifications (Story 4.8, SR-9)
sse-starlette = ">=2.0.0"

# Prometheus Metrics (Story 8.1, NFR27)
prometheus-client = ">=0.19.0"
uuid6 = "^2025.0.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
pytest-timeout = ">=2.2.0"
hypothesis = ">=6.90.0"

# Code Quality
ruff = ">=0.1.0"
mypy = ">=1.7.0"
black = ">=23.0.0"

# Type Stubs
types-redis = ">=4.6.0"

# Integration Testing with Containers (Story 0.5)
testcontainers = {version = ">=4.0.0", extras = ["postgres", "redis"]}

# Pre-commit hooks (Story 0.6)
pre-commit = ">=3.5.0"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C90",    # mccabe complexity
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP017",  # datetime.UTC requires Python 3.11+, use timezone.utc for 3.10 compat
    "B008",   # function call in default argument (standard pattern for Typer CLI)
    "B017",   # pytest.raises without match (intentional for exception type testing)
    "SIM102", # nested if statements (sometimes clearer than combined conditions)
    "SIM117", # nested with statements (context manager readability preference)
    "SIM105", # use contextlib.suppress (explicit try/except clearer in some contexts)
    "SIM116", # use dict instead of if-elif (sometimes if-elif is clearer)
    "SIM103", # return condition directly (sometimes explicit if/return is clearer)
    "B904",   # raise without from in except (not always necessary for exception chaining)
    "B007",   # unused loop variable (intentional in some iteration patterns)
    "B018",   # useless expression (sometimes used for documentation/assertions)
]

[tool.ruff.lint.flake8-type-checking]
# Allow forward references and late imports for circular dependency avoidance
quote-annotations = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "ASYNC230"]  # Allow imports after load_dotenv() and blocking IO in scripts
"tools/**/cli.py" = ["ASYNC230"]  # Allow blocking IO in CLI tools
"src/application/services/*.py" = ["E402", "ASYNC230", "C901"]  # Allow imports after setup, blocking IO, and complex business logic in services
"src/**/*.py" = ["F821"]  # Allow forward references with late imports for circular dependency avoidance
"src/api/models/observer.py" = ["F811"]  # Re-export + local definitions during DTO migration
"src/infrastructure/adapters/**/*.py" = ["ASYNC230", "C901"]  # Allow blocking IO and complex adapters
"tests/**/*.py" = ["F811", "F821", "E402", "ASYNC230", "ASYNC251"]  # Allow test-specific patterns
"tests/integration/conftest.py" = ["C901"]  # Complex SQL splitting helper

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["^src/spikes/"]
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "misc",
    "name-defined",
    "no-any-return",
    "no-redef",
    "no-untyped-call",
    "no-untyped-def",
    "return-value",
    "type-arg",
    "valid-type",
]

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "supabase.*",
    "hypothesis.*",
    "testcontainers.*",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["spikes.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
    "slow: mark test as slow",
    "spike: mark test as spike/investigation test",
    "chaos: mark test as chaos test for destructive/terminal operations (PM-5)",
    "smoke: mark test as quick smoke test for CI validation",
    "load: mark test as load/stress test (expensive, requires API keys)",
    "requires_api_keys: mark test as requiring LLM API keys to run",
    "requires_llm: mark test as requiring LLM/AI API connection (skipped in CI)",
    "requires_supabase: mark test as requiring real Supabase connection (skipped in CI)",
    "requires_postgres: mark test as requiring PostgreSQL connection",
    "requires_redis: mark test as requiring Redis connection",
    "requires_kafka: mark test as requiring Kafka/Redpanda connection",
    "requires_litellm: mark test as requiring LiteLLM or provider access",
    "performance: mark test as performance/timing sensitive (skipped in CI)",
    "timeout: mark test with a timeout in seconds",
    "external: mark test as requiring external services or APIs",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
