[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archon72-verify"
version = "0.1.0"
description = "Open-source verification toolkit for Archon 72 event chain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
crypto = [
    "cryptography>=41.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
archon72-verify = "archon72_verify.cli:app"

[project.urls]
Homepage = "https://github.com/archon72/archon72-verify"
Documentation = "https://archon72.io/docs/verification"
Repository = "https://github.com/archon72/archon72-verify"

[tool.hatch.build.targets.wheel]
packages = ["archon72_verify"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
